added Featured Stories. Added Top Story

--- a/index.html
+++ b/index.html
@@ -122,19 +122,89 @@
             <div class="media-body"><h5 class="mt-0">Heading</h5>text</div>
         </div> -->
     <div class="card item item-1">
-        <div class="article-classification"><a href="#">U.S</a></div>
+        <div class="article-classification"><a href="#"class="font-weight-bold">U.S</a></div>
      <a href="">  <img src="https://d.newsweek.com/en/full/1579757/coronavirus-recoveries-300000-covid-19.webp?w=397&h=265&q=90&f=010d225fe3d85c8c4895820c384eb82a" alt="" class="card-img-top"></a> 
         <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Over 300,000 Have Recovered From Coronavirus, Per Johns Hopkins University</p> </a>
         <p class="font-size-14">If a convalescent plasma program proves to be a successful treatment, more people recovering could potentially lead to even more people recovering.</p></div>
     </div>
     <div class="card item item-1">
-        <div class="article-classification"><a href="#">World</a></div>
+        <div class="article-classification"><a href="#"class="font-weight-bold">World</a></div>
      <a href="">  <img src="https://d.newsweek.com/en/full/1579548/north-korea-kim-jong-un-fertilizer-factory.webp?w=397&h=265&q=90&f=e758798090f20170237fde1ad6aeceaa" alt="" class="card-img-top"></a> 
         <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">North Korea Could Be Using Fertilizer Plants to Make More Nuclear Material</p> </a>
         <p class="font-size-14">Margaret Croy's research shows that North Korea could be extracting uranium from phosphate fertilizers, and her report comes as the country's Sunchon Phosphatic Fertilizer Factory is reportedly "on the eve of completion."</p></div>
     </div>
+    <div class="card item item-1">
+        <div class="article-classification"><a href="#">U.S</a></div>
+     <a href="">  <img src="https://d.newsweek.com/en/full/1579851/pence-meets-raab-white-house.webp?w=397&h=265&q=90&f=d7b1b5fab7a313c8b000f75473630225" alt="" class="card-img-top"></a> 
+        <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Pence and Dominic Raab Spoke After Boris Johnson Hospitalized with COVID-19Pence and Dominic Raab Spoke After Boris Johnson Hospitalized with COVID-19</p> </a>
+        <p class="font-size-14">The Vice President called his British counterpart after Prime Minister Boris Johnson was hospitalized with severe COVID-19 symptoms.</p></div>
     </div>
-          <div class="col-6"><h5 class="text-center title-page font-weight-bold">TOP STORY</h5></div>
+    <div class="card item item-1">
+        <div class="article-classification"><a href="#" class="font-weight-bold">NEWS</a></div>
+     <a href="">  <img src="https://d.newsweek.com/en/full/1579853/thomas-modly-resignation-navy-secretary.webp?w=397&h=265&q=90&f=3698b7d87a484072fefc669069470edf" alt="" class="card-img-top"></a> 
+        <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Acting U.S. Navy Secretary Thomas Modly Resigns After Leaked Audio</p> </a>
+        <p class="font-size-14">Acting Navy Secretary Thomas Modly submitted his resignation Tuesday, just one day after leaked audio overheard him calling ousted U.S.S. Theodore Roosevelt commander, Captain Brett Crozier, "stupid" in an address to the ship's crew.</p></div>
+    </div>
+    <div class="card item item-sponsor">
+        <div class="article-classification"><a href="#" class="font-weight-bold">SPONSORED INSIGHT</a></div>
+     <a href="">  <img src="https://d.newsweek.com/en/full/1575945/cybersecurity-vantage-hp-sponsor.jpg?w=500&h=333&f=ac517642217c0d9cec695be60008ce2a" alt="" class="card-img-top"></a> 
+        <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Weathering the Perfect Storm</p> </a>
+        <p class="font-size-14">COVID-19 is not our only enemy. While the world confronts a pandemic, our critical infrastructure is vulnerable to cyberattack. Read this new report on where the weak points are and how to strengthen defenses against terrorists and cyber-criminals.</p></div>
+    </div>
+    <div class="card item item-sponsor">
+        <div class="article-classification"><a href="#" class="font-weight-bold">SPONSORED INSIGHT</a></div>
+     <a href="">  <img src="https://d.newsweek.com/en/full/1578860/sbf-photo-2.jpg?w=500&h=333&f=9014e34050eed9372309cdf319ca6a7a" alt="" class="card-img-top"></a> 
+        <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Cryptocurrencies Have the Potential to Solve the Bottlenecks of Our Monetary System</p> </a>
+        <p class="font-size-14">With the U.S.A. announcing it will print a seemingly unlimited supply of dollars to offset the effects of the COVID-19, cryptocurrencies have a unique opportunity to position themselves as a reliable store of value.</p></div>
+    </div>
+    <div class="card item item-sponsor">
+        <div class="article-classification"><a href="#" class="font-weight-bold">SPONSORED INSIGHT</a></div>
+     <a href="">  <img src="https://d.newsweek.com/en/full/1571226/guest-house-oscala.jpg?w=500&h=333&f=d787e5d9fb89f5732572966a47675994" alt="" class="card-img-top"></a> 
+        <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Who Leads the Field in Dependency Treatment in 2020?</p> </a>
+        <p class="font-size-14">When seeking guidance on beating an addiction, there are many things to consider. Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right road for the rest of your life? Find out more.</p></div>
+    </div>
+    <div class="card item item-sponsor">
+     <a href="">  <img src="https://d.newsweek.com/en/full/1568509/newsweek-amplify.png?w=500&h=333&f=98c0ebfc554597997a0de3bd6159812a" alt="" class="card-img-top"></a> 
+        <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Newsweek AMPLIFY Launches Strategic Partnership Solutions for Brands</p> </a>
+        <p class="font-size-14">Newsweek AMPLIFY, the company's independent business unit, has launched a new program to empower digital brands with comprehensive content marketing and advertising strategies.</p></div>
+    </div>
+    </div>
+          <div class="col-6 column2"><h5 class="title-page font-weight-bold">TOP STORY</h5>
+        <div class="card item">
+            <div class="article-classification"><a href="#"class="font-weight-bold">U.S</a></div>
+
+           <a href="#"> <img src="https://d.newsweek.com/en/full/1579823/white-house-coronavirus-task-force-holds-daily-briefing.webp?w=591&h=364&f=b4a227b68a02601d1db9480162d28515" alt="" class="card-img-top"></a>
+            <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">North Korea Could Be Using Fertilizer Plants to Make More Nuclear Material</p> </a>
+                <p class="font-size-14">Margaret Croy's research shows that North Korea could be extracting uranium from phosphate fertilizers, and her report comes as the country's Sunchon Phosphatic Fertilizer Factory is reportedly "on the eve of completion."</p></div>
+        </div>
+        <h5 class="title-page font-weight-bold">HEROES OF THE PANDEMIC</h5>
+       <div class="row">
+           <div class="col-4 small-middle-col">        <div class="card item">
+            <div class="article-classification"><a href="#"class="font-weight-bold">PANDEMIC HEROES</a></div>
+
+           <a href="#"> <img src="https://d.newsweek.com/en/full/1578357/restauranteur-delivers-oranges-hospital-workers-amid-coronavirus-crisis.webp?w=397&h=397&f=c821b8426a180c7ef06fe0ae3a80a48b" alt="" class="card-img-top"></a>
+            <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis</p> </a>
+                <p class="font-size-14">"We all have to help each other," Matthew Fermin, owner of East Harlem restaurant Santiago's Beer Garden, told Newsweek.</p></div>
+        </div></div>
+           <div class="col-4 small-middle-col">
+            <div class="card item">
+                <div class="article-classification"><a href="#"class="font-weight-bold">PANDEMIC HEROES</a></div>
+    
+               <a href="#"> <img src="https://d.newsweek.com/en/full/1578426/zoe-monterola-founder-six-feet-supplies.webp?w=397&h=397&f=f7a624e81aa902878bb39d5fe83e971f" alt="" class="card-img-top"></a>
+                <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Teenagers Shop for the Vulnerable During Coronavirus Emergency</p> </a>
+                    <p class="font-size-14">"I almost cried," said a user of Six Feet Supplies, a charity started by teenagers who shop for those susceptible to COVID-19.</p></div>
+            </div>
+           </div>
+           <div class="col-4 small-middle-col">            <div class="card item">
+            <div class="article-classification"><a href="#"class="font-weight-bold">PANDEMIC HEROES</a></div>
+
+           <a href="#"> <img src="https://d.newsweek.com/en/full/1578399/coronavirus-pandemic-heroes-food-nurses-philadelphia.webp?w=397&h=397&f=df54d52fbce46b666dc3c098564d1f08" alt="" class="card-img-top"></a>
+            <div class="card-body item-body"> <a href=""> <p class="h6 font-weight-bold">Philly DJ Rallies Friends, Strangers to Feed Nurses and Support Businesses</p> </a>
+                <p class="font-size-14">"I want to keep it going as long as we can," Ryan O'Connell told Newsweek.</p></div>
+        </div></div>
+
+       </div> 
+    </div>
           <div class="col-3"><h5 class="title-page font-weight-bold">OPNION</h5></div>
         </div>
     </main>
