--- a/index.html
+++ b/index.html
@@ -20,10 +20,30 @@
   <body>
     <div class="container-max">
       <header class="header">
-        <nav
-          class="navbar navbar-expand-lg align-items-end justify-content-between top-nav"
-        >
-          <ul class="navbar-nav nav-right">
+        <nav class="navbar navbar-expand-lg align-items-end top-nav">
+          <ul class="navbar-nav flex-md-row flex-sm-row flex-row nav-left">
+            <li class="nav-item">
+              <a href="#" class="navbar-brand">
+                <svg
+                  version="1.1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 395.6 60"
+                  style="enable-background: new 0 0 395.6 60;"
+                  xml:space="preserve"
+                >
+                  <g>
+                    <path
+                      class="st0"
+                      d="M58.7,10.8h-5.6v48.3H42.8l-25.1-33v22.1h5.6v10.8H0V48.3h5.6V10.8H0V0h17.6L41,30.7V10.8h-5.6V0h23.2	L58.7,10.8L58.7,10.8z M95.8,38c0,0.9,0,1.8-0.1,2.7H70.3c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11	c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6C89.9,16.3,95.8,25.6,95.8,38 M159,27.3h-3.7	l-9.4,31.8h-12.5l-5.9-17.4l-5.3,17.4h-12.8L98.8,27.4h-3.7V16.6h22.1v10.7h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.6l5-16.9h-5.6V16.6	H159L159,27.3L159,27.3z M174.5,27.8c0,1.5,1.2,2.5,5.4,3.9l6,2c5.5,1.8,12.1,5.9,12.1,13.4c0,8.8-6.6,13-14.7,13	c-6.5,0-11.5-3.2-12.9-4.6V59h-10.8V44.4h10.6c0.3,4.8,4.6,7.3,8.5,7.3c3.2,0,4.7-1.4,4.7-3c0-2-1.2-3.1-6.5-4.8l-5.3-1.8	c-5.4-1.7-11.4-5.7-11.4-12.8c0-8.7,7.7-13.1,14.3-13.1c6.8,0,10.1,1.9,11.8,3.8l0.1-3.3H197v13.3h-11.2c-0.2-3.6-3.7-5.2-7.2-5.2	C175.8,24.8,174.5,26.1,174.5,27.8 M262.8,27.3h-3.7l-9.4,31.8h-12.5l-5.9-17.4L226,59.1h-12.8l-10.6-31.7h-3.7V16.6h22.1v10.7	h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.7l5-16.9h-5.6V16.6h18.5V27.3z M302,37.9c0,0.9,0,1.8-0.1,2.7h-25.4	c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1	c0-10.5,7-21.6,21-21.6C296.1,16.2,302,25.5,302,37.9 M343.9,37.8c0,0.9,0,1.8-0.1,2.7h-25.4c-0.7,8.2,2.4,10.6,7.1,10.6	c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6	C338,16.1,343.9,25.4,343.9,37.8 M389.9,59h-12.8l-13.3-17.3l-4.3,3.2v3.4h3.8V59h-19.6V48.3h3.7V10.6h-5.6V0h17.8v33.9l8.9-6.5	h-5.6V16.6h23.9v10.8h-3.7l-9.3,7l10.7,13.9h5.6L389.9,59L389.9,59z M395.6,56.6c0,0.5-0.1,0.9-0.4,1.2c-0.2,0.4-0.5,0.7-0.9,0.9	c-0.4,0.2-0.8,0.4-1.3,0.4c-0.5,0-0.9-0.1-1.2-0.4c-0.4-0.2-0.7-0.5-0.9-0.9c-0.2-0.4-0.4-0.8-0.4-1.2c0-0.5,0.1-0.9,0.4-1.2	c0.2-0.4,0.5-0.7,0.9-0.9c0.4-0.2,0.8-0.4,1.2-0.4c0.5,0,0.9,0.1,1.3,0.4c0.4,0.2,0.7,0.5,0.9,0.9	C395.5,55.8,395.6,56.2,395.6,56.6 M394.6,58c0.4-0.4,0.6-0.9,0.6-1.4c0-0.6-0.2-1-0.6-1.4s-0.9-0.6-1.4-0.6s-1,0.2-1.4,0.6	c-0.4,0.4-0.6,0.9-0.6,1.4c0,0.6,0.2,1,0.6,1.4c0.4,0.4,0.9,0.6,1.4,0.6S394.2,58.4,394.6,58 M393.6,56.8c0.1,0.1,0.2,0.1,0.2,0.1	c0.1,0.1,0.2,0.2,0.2,0.3c0,0,0.2,0.3,0.4,0.8h-0.8c-0.3-0.5-0.4-0.8-0.5-0.9c-0.1-0.1-0.2-0.2-0.3-0.2c0,0-0.1,0-0.1,0v1.1h-0.6	v-2.6h1.2c0.4,0,0.6,0.1,0.7,0.2c0.2,0.2,0.2,0.3,0.2,0.6c0,0.2-0.1,0.4-0.2,0.5C393.9,56.6,393.8,56.7,393.6,56.8 M393.5,56.3	c0.1-0.1,0.1-0.2,0.1-0.3s-0.1-0.2-0.1-0.3c-0.1-0.1-0.2-0.1-0.4-0.1h-0.3v0.7h0.3C393.3,56.4,393.4,56.4,393.5,56.3 M318.4,33.5	h13.9c0-6-3.9-8.4-6.8-8.4C322.1,25.2,318.6,27.9,318.4,33.5 M276.5,33.6h13.9c0-6-3.9-8.4-6.8-8.4C280.3,25.2,276.8,28,276.5,33.6 M70.3,33.7h13.9c0-6-3.9-8.4-6.8-8.4C74.1,25.3,70.6,28.1,70.3,33.7"
+                    ></path>
+                  </g>
+                </svg>
+              </a>
+            </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
                 <img
@@ -31,16 +51,19 @@
                   alt=""
                   class="img"
                 />
-                23° Belo Horizonte, BR <i class="fas fa-chevron-right"></i>
+                23°
+                <span>
+                  Belo Horizonte, BR <i class="fas fa-chevron-right"></i
+                ></span>
               </a>
             </li>
-            <li class="list-item nav-right-text">
+            <li class="list-item nav-left-text">
               <span class="navbar-text">
                 Wed, Apr 08, 2020
               </span>
             </li>
           </ul>
-          <div class="nav-middle">
+          <div class="nav-middle justify-self-start">
             <a href="#" class="navbar-brand">
               <svg
                 version="1.1"
@@ -62,7 +85,7 @@
               </svg>
             </a>
           </div>
-          <ul class="navbar-nav nav-left">
+          <ul class="navbar-nav nav-right">
             <li class="nav-item">
               <a href="#" class="nav-link font-weight-bold">SIGN IN</a>
             </li>
@@ -71,12 +94,20 @@
                 >SUBSCRIBE <i class="fas fa-chevron-right"></i
               ></a>
             </li>
+            <li>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarToggler"
+              >
+                <span class="navbar-toggler-icon"
+                  ><i class="fas fa-bars"></i
+                ></span>
+              </button>
+            </li>
           </ul>
-
-          <div
-            class="collapse navbar-collapse nav-col"
-            id="navbarSupportedContent"
-          >
+          <div class="collapse navbar-collapse nav-col" id="navbarToggler">
             <div class="nav-bottom">
               <ul class="d-flex">
                 <li><a href="" class="font-weight-bold"> U.S. </a></li>
@@ -513,7 +544,7 @@
                 <h5 class="title-page font-weight-bold">
                   MORE STORIES
                 </h5>
-                <div class="media">
+                <div class="media more-stories">
                   <img
                     src="https://d.newsweek.com/en/full/1579850/coronavirus-us.webp?w=95&h=95&f=c7a7891ba0c9a65e0a3b15286cc24b4d"
                     alt=""
@@ -527,6 +558,41 @@
                     <p>
                       The map tracks where the coronavirus outbreak is spreading
                       across the U.S., now the epicenter of the global pandemic.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580219/biden-holds-virtual-town-hall.webp?w=95&h=95&f=2b91bf8e633f928b7150765807f115c3"
+                    alt=""
+                    class="d-flex mr-3"
+                  />
+                  <div class="media-body">
+                    <h5 class="mt-0">
+                      Joe Biden vs Donald Trump: What the Latest Polls Are
+                      Saying
+                    </h5>
+                    <p>
+                      Recent poll results show Biden holding leads over Trump in
+                      both national and statewide polling in key states.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580024/tedros-adhanom-ghebreyesus-who-donald-trump-coronavirus.webp?w=95&h=95&f=99ef5680bb92dc25c0b2cbfb62c9a951"
+                    alt=""
+                    class="d-flex mr-3"
+                  />
+                  <div class="media-body">
+                    <h5 class="mt-0">
+                      WHO Director Thanks World Leaders for Support After Trump
+                      Funding Threat
+                    </h5>
+                    <p>
+                      Trump accused the WHO of being too "China centric" on
+                      Tuesday, and suggested the organization had mishandled the
+                      COVID-19 outbreak.
                     </p>
                   </div>
                 </div>
