--- a/index.html
+++ b/index.html
@@ -139,10 +139,7 @@
           <div class="row">
             <div class="col-lg-3 col-md-6 column1">
               <h5 class="font-weight-bold title-page">FEATURED STORIES</h5>
-              <!-- <div class="media">
-            <img src="https://d.newsweek.com/en/full/1579757/coronavirus-recoveries-300000-covid-19.webp?w=397&h=265&q=90&f=010d225fe3d85c8c4895820c384eb82a" alt="" class="mr-3">
-            <div class="media-body"><h5 class="mt-0">Heading</h5>text</div>
-        </div> -->
+
               <div class="card item item-1">
                 <div class="article-classification">
                   <a href="#" class="font-weight-bold">U.S</a>
@@ -545,16 +542,19 @@
                   MORE STORIES
                 </h5>
                 <div class="media more-stories">
-                  <img
-                    src="https://d.newsweek.com/en/full/1579850/coronavirus-us.webp?w=95&h=95&f=c7a7891ba0c9a65e0a3b15286cc24b4d"
-                    alt=""
-                    class="d-flex mr-3"
-                  />
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1579850/coronavirus-us.webp?w=95&h=95&f=c7a7891ba0c9a65e0a3b15286cc24b4d"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
                   <div class="media-body">
-                    <h5 class="mt-0">
-                      U.S. Coronavirus Map Update: Where COVID-19 Cases Are
-                      Located
-                    </h5>
+                    <a href="#">
+                      <h5 class="mt-0">
+                        U.S. Coronavirus Map Update: Where COVID-19 Cases Are
+                        Located
+                      </h5></a
+                    >
                     <p>
                       The map tracks where the coronavirus outbreak is spreading
                       across the U.S., now the epicenter of the global pandemic.
@@ -562,16 +562,19 @@
                   </div>
                 </div>
                 <div class="media more-stories">
-                  <img
-                    src="https://d.newsweek.com/en/full/1580219/biden-holds-virtual-town-hall.webp?w=95&h=95&f=2b91bf8e633f928b7150765807f115c3"
-                    alt=""
-                    class="d-flex mr-3"
-                  />
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580219/biden-holds-virtual-town-hall.webp?w=95&h=95&f=2b91bf8e633f928b7150765807f115c3"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
                   <div class="media-body">
-                    <h5 class="mt-0">
-                      Joe Biden vs Donald Trump: What the Latest Polls Are
-                      Saying
-                    </h5>
+                    <a href="#">
+                      <h5 class="mt-0">
+                        Joe Biden vs Donald Trump: What the Latest Polls Are
+                        Saying
+                      </h5></a
+                    >
                     <p>
                       Recent poll results show Biden holding leads over Trump in
                       both national and statewide polling in key states.
@@ -579,16 +582,19 @@
                   </div>
                 </div>
                 <div class="media more-stories">
-                  <img
-                    src="https://d.newsweek.com/en/full/1580024/tedros-adhanom-ghebreyesus-who-donald-trump-coronavirus.webp?w=95&h=95&f=99ef5680bb92dc25c0b2cbfb62c9a951"
-                    alt=""
-                    class="d-flex mr-3"
-                  />
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580024/tedros-adhanom-ghebreyesus-who-donald-trump-coronavirus.webp?w=95&h=95&f=99ef5680bb92dc25c0b2cbfb62c9a951"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
                   <div class="media-body">
-                    <h5 class="mt-0">
-                      WHO Director Thanks World Leaders for Support After Trump
-                      Funding Threat
-                    </h5>
+                    <a href="#">
+                      <h5 class="mt-0">
+                        WHO Director Thanks World Leaders for Support After
+                        Trump Funding Threat
+                      </h5></a
+                    >
                     <p>
                       Trump accused the WHO of being too "China centric" on
                       Tuesday, and suggested the organization had mishandled the
@@ -596,11 +602,338 @@
                     </p>
                   </div>
                 </div>
+                <div class="media more-stories">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1579978/pill-drug-medicine-stock-getty.webp?w=95&h=95&f=8c92b8b995b316a57ccc93392436d664"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="#">
+                      <h5 class="mt-0">
+                        CDC Hydroxychloroquine Prescription Advice Removed From
+                        Website
+                      </h5></a
+                    >
+                    <p>
+                      Hydroxychloroquine and its analog chloroquine has been
+                      used experimentally on coronavirus patients as there is
+                      currently no specific drug or vaccine against the disease.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="#">
+                    <img
+                      src="https://d.newsweek.com/en/full/1579757/coronavirus-recoveries-300000-covid-19.webp?w=95&h=95&f=90d6fe85423878a1f085526e66953054"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="#">
+                      <h5 class="mt-0">
+                        Over 300,000 Have Recovered From Coronavirus, Per Johns
+                        Hopkins University
+                      </h5></a
+                    >
+                    <p>
+                      If a convalescent plasma program proves to be a successful
+                      treatment, more people recovering could potentially lead
+                      to even more people recovering.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580185/us-department-treasury-secretary.webp?w=95&h=95&f=c3d78c4471aea4a527546e6dbf6cb949"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Certain Areas Hit Hard by Coronavirus Will Take Longer
+                        to Reopen
+                      </h5></a
+                    >
+                    <p>
+                      "My expectation is that we'll be opening it up based upon
+                      medical conditions," Mnuchin said. "So, obviously we'd
+                      like to open up as much GDP as we can, but my expectation
+                      is that places like New York are gonna take a little bit
+                      longer."
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580124/blood-test-stock-getty-doctor-hospital.webp?w=95&h=95&f=3ff26685f3fc37262b30db1f7e1d2347"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Blood of Americans Sought to Reveal True Scale of
+                        COVID-19 Epidemic
+                      </h5></a
+                    >
+                    <p>
+                      Experts hope antibody tests will bring mild and
+                      asymptomatic coronavirus cases into data compiled on the
+                      disease.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580167/congress-considers-emergency-funding-small-businesses.webp?w=95&h=95&f=1817da42a01e231fcabd6403778dd56c"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Here's Who Could Get More Money Under Congress' New $250
+                        Billion Aid Plan for Small Businesses
+                      </h5></a
+                    >
+                    <p>
+                      Farmers, nonprofits and minority- and veteran-owned
+                      businesses could be among the beneficiaries—but getting
+                      the hundreds of billions of dollars in the hands of the
+                      business owners in a timely fashion could be complicated.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580003/coronavirus-recession-stimulus-checks-financial-help.webp?w=95&h=95&f=4d83825f68e912012baf8cbc44c96a7c"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Where to Find Financial Help Before Stimulus Checks
+                        Deposit
+                      </h5></a
+                    >
+                    <p>
+                      Here is a list of community, nonprofit, and government
+                      initiatives available to people in need during the
+                      pandemic.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1579893/btn-sports-banner-basketball.webp?w=95&h=95&l=58&t=45&f=be73b43aa6ec33db7ab18d5468a84c08"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Americans May Be Missing Out On $8.5 Billion In March
+                        Madness Bets
+                      </h5></a
+                    >
+                    <p>
+                      College hoops' Big Dance is just one of dozens of major
+                      sporting events that have been postponed or cancelled due
+                      to the coronavirus in 2020. From the Kentucky Derby to
+                      Formula One racing to the Summer Olympics, here's a
+                      by-the-numbers sampling of what fans are missing this
+                      year.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580017/wisconsin-voting.webp?w=95&h=95&f=30838f402884d10f2b39df584beb3038"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Backlash After Wisconsin Voters Forced to Risk Catching
+                        COVID-19 to Vote
+                      </h5></a
+                    >
+                    <p>
+                      "I'm surprised Wisconsin took this risk, knowing they
+                      don't have to," said former GOP Rep. Charlie Dent.
+                    </p>
+                  </div>
+                </div>
+                <div class="media more-stories">
+                  <a href="">
+                    <img
+                      src="https://d.newsweek.com/en/full/1580030/florida.webp?w=95&h=95&f=d80e00e457733e8c9258279e2a90b6ca"
+                      alt=""
+                      class="d-flex mr-3"
+                  /></a>
+                  <div class="media-body">
+                    <a href="">
+                      <h5 class="mt-0">
+                        Hundreds of Florida Residents Line Up for Unemployment
+                        Benefits
+                      </h5></a
+                    >
+                    <p>
+                      People risked coronavirus infection to apply in-person.
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
-
-            <div class="col-3">
+            <div class="col-3 column3">
               <h5 class="title-page font-weight-bold">OPNION</h5>
+              <div class="media opinion-item-1">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1579516/beatrix-hoffman.webp?w=63&h=63&f=8d99ed4d0040e71e525a286660493a36"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      The U.S. Must Provide Health Insurance for All—And This
+                      Pandemic Proves It
+                    </h5></a
+                  >
+                  <p class="sub-title">
+                    BY BEATRIX HOFFMAN
+                  </p>
+                </div>
+              </div>
+              <div class="media opinion-item-1">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1528785/roff-new.webp?w=63&h=63&f=4dc2ef8dad149bbca161552d8b875591"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Yes, We Need a 9/11-Style Coronavirus Commission—Appointed
+                      by Trump
+                    </h5></a
+                  >
+                  <p class="sub-title">
+                    BY PETER ROFF
+                  </p>
+                </div>
+              </div>
+              <div class="media opinion-item-1">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1579513/m-gregg-bloche.webp?w=63&h=63&f=ebcb5881e9cce51921ce598860d50f49"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      As Doctors Decide Who Will Die, Keeping Faith With
+                      Patients Is Essential
+                    </h5></a
+                  >
+                  <p class="sub-title">
+                    BY M. GREGG BLOCHE
+                  </p>
+                </div>
+              </div>
+              <div class="media opinion-item-1">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/109198/lee-habeeb.webp?w=63&h=63&f=dd1164c722d99b834fc2f3f410f433d4"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Coronavirus Is Unlike Any War Americans Have Fought. Yet
+                      We'll Win It Too
+                    </h5></a
+                  >
+                  <p class="sub-title">
+                    BY LEE HABEEB
+                  </p>
+                </div>
+              </div>
+              <h5 class="title-page font-weight-bold">THE DEBATE</h5>
+              <div class="media opinion-item-2">
+                <img
+                  class="d-flex mr-3"
+                  alt="Generic placeholder image"
+                  width="95px"
+                  height="95px"
+                  src="https://d.newsweek.com/en/full/1575781/joe-biden.webp?w=397&h=265&f=143b9f300ab9db80889ea2d79ae4e81b"
+                />
+                <div class="media-body">
+                  <h5 class="mt-0 title font-weight-bold align-self-center">
+                    Biden's Running Mate Needs to Win Him an Entire State, Not
+                    Just a ConstituencyMedia heading
+                  </h5>
+                </div>
+              </div>
+              <div class="media opinion-item-2-sub-item">
+                <div class="media-body">
+                  <p class="sub-item-p">
+                    BY PETER ROFF
+                  </p>
+                </div>
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1528785/roff-new.webp?w=63&h=63&f=4dc2ef8dad149bbca161552d8b875591"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+              </div>
+              <div class="debate-divisor text-center">
+                <p class="text-center">VS</p>
+              </div>
+              <div class="media opinion-item-2">
+                <img
+                  class="d-flex mr-3"
+                  alt="Generic placeholder image"
+                  width="95px"
+                  height="95px"
+                  src="https://d.newsweek.com/en/full/1573022/joe-biden-bernie-sanders.webp?w=397&h=265&f=f90d6b535ea0fcac3ae722c195fdf784"
+                />
+                <div class="media-body">
+                  <h5 class="mt-0 title font-weight-bold align-self-center">
+                    A Woman of Color VP Is More Than a Consolation Prize. It's a
+                    Necessity
+                  </h5>
+                </div>
+              </div>
+              <div class="media opinion-item-2-sub-item">
+                <div class="media-body">
+                  <p class="sub-item-p">
+                    BY AIMEE ALLISON
+                  </p>
+                </div>
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1579513/m-gregg-bloche.webp?w=63&h=63&f=ebcb5881e9cce51921ce598860d50f49"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+              </div>
             </div>
           </div>
         </main>
