finished top half of the page

--- a/index.html
+++ b/index.html
@@ -929,10 +929,194 @@
                 </div>
                 <a href="">
                   <img
-                    src="https://d.newsweek.com/en/full/1579513/m-gregg-bloche.webp?w=63&h=63&f=ebcb5881e9cce51921ce598860d50f49"
+                    src="https://d.newsweek.com/en/full/1565352/aimee-allison.webp?w=150&h=150&f=ae41d00ed12c8a0c6447a34ea3da29d0"
+                    alt=""
+                    height="150"
+                    width="150"
+                    class="d-flex mr-3"
+                /></a>
+              </div>
+              <h5 class="title-page font-weight-bold">LATEST NEWS</h5>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580289/bill-oreilly.webp?w=95&h=95&f=394161c4bc70d667d2f1701a7dbcf561"
                     alt=""
                     class="d-flex mr-3"
                 /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Coronavirus Is Unlike Any War Americans Have Fought. Yet
+                      We'll Win It Too
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580299/publix-milk-chocolate-milk.webp?w=95&h=95&f=ad3cf29bc8cbd3d4c3344fe8b30fd0af"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Florida Dairy Farmers Dump 800,000 Gallons of Excess Milk
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580293/jay-inslee.webp?w=95&h=95&f=521d157153eff695ee9be9254353cc57"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Social Distancing May Have Helped Washington and Oregon
+                      Flatten the Curve
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580296/hit-run-stock-photo.webp?w=95&h=95&f=efea6264abe753effece9ca5faaa809a"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Man Accused of Hit-and-Run Picked Up By Police Beaten and
+                      Tied to Pole
+                    </h5></a
+                  >
+                </div>
+              </div>
+              <div class="media opinion-item-3">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580286/andrew-napolitano.webp?w=95&h=95&f=aeba95c5b34f72b024e70ad231d5c7db"
+                    alt=""
+                    class="d-flex mr-3"
+                /></a>
+                <div class="media-body">
+                  <a href="">
+                    <h5 class="mt-0 title font-weight-bold">
+                      Fox News Judge Calls Kushner's Coronavirus Surveillance
+                      Unconstitutional
+                    </h5></a
+                  >
+                </div>
+              </div>
+
+              <div class="card item item-sponsor">
+                <div class="article-classification">
+                  <a href="#" class="font-weight-bold">SPONSORED INSIGHT</a>
+                </div>
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1575945/cybersecurity-vantage-hp-sponsor.jpg?w=500&h=333&f=ac517642217c0d9cec695be60008ce2a"
+                    alt=""
+                    class="card-img-top"
+                /></a>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      Weathering the Perfect Storm
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    COVID-19 is not our only enemy. While the world confronts a
+                    pandemic, our critical infrastructure is vulnerable to
+                    cyberattack. Read this new report on where the weak points
+                    are and how to strengthen defenses against terrorists and
+                    cyber-criminals.
+                  </p>
+                </div>
+              </div>
+              <div class="card newsletter mx-auto">
+                <div class="card-body">
+                  <h4 class="card-title d-flex">
+                    <span class="logo mr-2 align-self-end"></span> SIGN UP FOR
+                    OUR NEWSLETTER
+                  </h4>
+                  <button class="btn btn-primary btn-sm d-block">
+                    SIGN UP
+                  </button>
+                  <a href="#" class="card-link">Update your preferences »</a>
+                </div>
+              </div>
+              <div class="card item item-sponsor">
+                <div class="article-classification">
+                  <a href="#" class="font-weight-bold">SPONSORED INSIGHT</a>
+                </div>
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1563375/delphian-school.jpg?w=500&h=333&f=c4fe893bfb5642271e1298b1bea3989b"
+                    alt=""
+                    class="card-img-top"
+                /></a>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      What Can A Private Education Do For Your Child?
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    What is the single most consequential choice you make to
+                    give your child the best possible advantage in life? If you
+                    think it’s education, read on.
+                  </p>
+                </div>
+              </div>
+              <div class="card item item-sponsor">
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1572014/worlds-best-hospitals-2020.png?w=500&h=333&f=c871e2709e79f9ba030be976797f7aa2"
+                    alt=""
+                    class="card-img-top"
+                /></a>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      World's Best Hospitals 2020
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    Newsweek partnered with Statista Inc. to rank the leading
+                    hospitals in 21 countries
+                  </p>
+                </div>
+              </div>
+              <div class="card item item-sponsor">
+                <div class="article-classification">
+                  <a href="#" class="font-weight-bold">SPONSORED INSIGHT</a>
+                </div>
+                <a href="">
+                  <img
+                    src="https://d.newsweek.com/en/full/1579652/newsweek2-gettyimages-955959130.jpg?w=500&h=333&f=766644c7e3e0eac31542ef74e910d9fe"
+                    alt=""
+                    class="card-img-top"
+                /></a>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold">
+                      What Is Your Accounting And Finance Team Missing?
+                    </p>
+                  </a>
+                  <p class="font-size-14">
+                    Have you ever wanted more from your accounting and finance
+                    professionals? These three letters can help.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
