added section 2. Styled section 2

--- a/index.html
+++ b/index.html
@@ -1121,6 +1121,184 @@
             </div>
           </div>
         </main>
+        <h4
+          class="text-center d-flex justify-content-center mt-5 mb-3 pb-2 font-weight-bold middle-page-separator"
+        >
+          <span class="span-logo d-block"></span>IN THE MAGAZINE
+        </h4>
+        <main class="section-2">
+          <div class="row">
+            <div class="col-lg-3 column1">
+              <div class="card align-self-center">
+                <a href="#">
+                  <img
+                    src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.webp?w=290&h=387&q=90&f=223e4b4f684ec82358d1b34700942bde"
+                    alt=""
+                    class="card-img-top"
+                /></a>
+                <div class="card-body">
+                  <a href=""
+                    >SEE ALL FEATURES <i class="fas fa-chevron-right"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="card align-self-center in-the-mag-img">
+                <a href="#">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1577399/culture-hollywood-01.webp?w=466&h=311&l=57&t=43&q=90&f=b3efbf234050b943bd9509285112ae01"
+                      alt=""
+                      class="card-img-top position-absolute"
+                    />
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h6 class="title align-items-center d-flex font-weight-bold">
+                    <span>PERISCOPE</span><a href="#" class="ml-3">CULTURE</a>
+                  </h6>
+                  <h6 class="card-title font-weight-bold">
+                    <a href="" class="text-black"
+                      >Hollywood Takes An Economic Beating from COVID-19
+                    </a>
+                  </h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 column2">
+              <div class="card align-self-center mt-4 in-the-mag-img">
+                <a href="#">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1577311/remote-work-04.webp?w=466&h=311&q=90&f=f2840ff6913f357ddffea7af291afbb5"
+                      alt=""
+                      class="card-img-top position-absolute"
+                    />
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h6 class="title align-items-center d-flex font-weight-bold">
+                    <span>DOWNTIME</span><a href="#" class="ml-3">BUSINESS</a>
+                  </h6>
+                  <h6 class="card-title font-weight-bold">
+                    <a href="" class="text-black"
+                      >The Coronavirus Will Change How We Work Forever
+                    </a>
+                  </h6>
+                </div>
+              </div>
+              <div class="card align-self-center mt-2 in-the-mag-img">
+                <a href="#">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1577620/cul-uncharted-movies-banner.webp?w=466&h=311&q=90&f=efd6114a06932407b563170953ea7178"
+                      alt=""
+                      class="card-img-top position-absolute"
+                    />
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h6 class="title align-items-center d-flex font-weight-bold">
+                    <span>DOWNTIME</span><a href="#" class="ml-3">CULTURE</a>
+                  </h6>
+                  <h6 class="card-title font-weight-bold">
+                    <a href="" class="text-black"
+                      >Take a Virtual Vacation With These Travel-Inspiring Films
+                    </a>
+                  </h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 column3">
+              <div class="card align-self-center mt-4 in-the-mag-img">
+                <a href="#">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1575814/us-unemployment-jobs-economy-recession-coronavirus.webp?w=466&h=311&l=45&t=50&q=90&f=b0d045a877b5f16cdc9e995f12048831"
+                      alt=""
+                      class="card-img-top position-absolute"
+                    />
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h6 class="title align-items-center d-flex font-weight-bold">
+                    <span>DOWNTIME</span><a href="#" class="ml-3">BUSINESS</a>
+                  </h6>
+                  <h6 class="card-title font-weight-bold">
+                    <a href="" class="text-black"
+                      >As Jobless Claims Surge, Here Are 7 Things To Do If You
+                      Lose Your Job
+                    </a>
+                  </h6>
+                </div>
+              </div>
+              <div class="card align-self-center mt-2 in-the-mag-img">
+                <a href="#">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1576924/cul-ps-reedus.webp?w=466&h=311&q=90&f=d7a14743a452631b3d9390e961866f63"
+                      alt=""
+                      class="card-img-top position-absolute"
+                    />
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h6 class="title align-items-center d-flex font-weight-bold">
+                    <span>DOWNTIME</span><a href="#" class="ml-3">CULTURE</a>
+                  </h6>
+                  <h6 class="card-title font-weight-bold">
+                    <a href="" class="text-black"
+                      >Norman Reedus on 10 Years of 'The Walking Dead'
+                    </a>
+                  </h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 column4">
+              <div class="card align-self-center mt-4 in-the-mag-img">
+                <a href="#">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1573813/us-president-donald-trump.webp?w=466&h=311&q=90&f=26d109052f04be260abb7772c12b4686"
+                      alt=""
+                      class="card-img-top position-absolute"
+                    />
+                  </div>
+                </a>
+                <div class="card-body">
+                  <h6 class="title align-items-center d-flex font-weight-bold">
+                    <span>PERISCOPE</span><a href="#" class="ml-3">U.S.</a>
+                  </h6>
+                  <h6 class="card-title font-weight-bold">
+                    <a href="" class="text-black"
+                      >Exclusive: Inside the Military's Secret Plans If
+                      Coronavirus Cripples D.C.
+                    </a>
+                  </h6>
+                </div>
+              </div>
+              <div class="card item item-sponsor in-the-mag-img">
+                <div class="article-classification">
+                  <a href="#" class="font-weight-bold">IN FOCUS</a>
+                </div>
+                <a href="">
+                  <div class="img-container position-relative">
+                    <img
+                      src="https://d.newsweek.com/en/full/1578027/emotional-postponement.webp?w=480&h=320&q=90&f=4a76ea9e412ba6422803ac27b573e7a1"
+                      alt=""
+                      class="card-img-top"
+                    /></div
+                ></a>
+                <div class="card-body item-body">
+                  <a href="">
+                    <p class="h6 font-weight-bold text-black">
+                      EMOTIONAL POSTPONEMENT
+                    </p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
       </div>
     </div>
     <!-- Optional JavaScript -->
