Added editors pick

--- a/index.html
+++ b/index.html
@@ -1122,11 +1122,11 @@
           </div>
         </main>
         <h4
-          class="text-center d-flex justify-content-center mt-5 mb-3 pb-2 font-weight-bold middle-page-separator"
+          class="text-center d-flex justify-content-center mt-5 mb-3 pb-2 font-weight-bold middle-page-separator text-dark"
         >
           <span class="span-logo d-block"></span>IN THE MAGAZINE
         </h4>
-        <main class="section-2">
+        <section class="section-2">
           <div class="row">
             <div class="col-lg-3 column1">
               <div class="card align-self-center">
@@ -1298,8 +1298,117 @@
               </div>
             </div>
           </div>
-        </main>
+        </section>
+        <h4
+          class="text-center d-flex justify-content-center mt-5 mb-3 pb-2 font-weight-bold middle-page-separator text-dark"
+        >
+          <span class="span-logo d-block"></span>EDITOR'S PICK
+        </h4>
       </div>
+      <section class="section-3">
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="card item item-1 border-0">
+              <div class="article-classification">
+                <a href="#" class="font-weight-bold text-red">HEALTH</a>
+              </div>
+              <a href="">
+                <img
+                  src="https://d.newsweek.com/en/full/1579744/covid-19-coronavirus-indonesia-getty.webp?w=397&h=265&f=cd27ed7ad448bf5945625ed5641ac832"
+                  alt=""
+                  class="card-img-top"
+              /></a>
+              <div class="card-body item-body">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    Is It Selfish to Go Outside? Ethical Dilemmas During the
+                    Covid-19 Pandemic
+                  </p>
+                </a>
+                <p class="font-size-14">
+                  The new coronavirus has infected more than 1.3 million people
+                  according to Johns Hopkins University.
+                </p>
+              </div>
+            </div>
+            <div class="card item item-1 border-0">
+              <div class="article-classification">
+                <a href="#" class="font-weight-bold text-red">NEWS</a>
+              </div>
+              <a href="">
+                <img
+                  src="https://d.newsweek.com/en/full/1579799/hospital-beds-covid-19.webp?w=397&h=265&f=2152c00e709b5df13f20517c434c7868"
+                  alt=""
+                  class="card-img-top"
+              /></a>
+              <div class="card-body item-body">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    Woman Opens Empty House to Medical Staff Treating
+                    Coronavirus Patients
+                  </p>
+                </a>
+                <p class="font-size-14">
+                  Las Vegas healthcare workers can stay for free in a donated
+                  property to keep their families safe from COVID-19.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="card item item-1 border-0">
+              <div class="article-classification">
+                <a href="#" class="font-weight-bold text-red">HEALTH</a>
+              </div>
+              <a href="">
+                <img
+                  src="https://d.newsweek.com/en/full/1579750/rent-freeze.webp?w=397&h=265&l=0&t=0&f=88a936df61a1ce2915287588495cbd67"
+                  alt=""
+                  class="card-img-top"
+              /></a>
+              <div class="card-body item-body">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    Rent Strikes Gather Steam As Campaigners Call For Payments
+                    To Be Waived
+                  </p>
+                </a>
+                <p class="font-size-14">
+                  Many tenants unions and campaigners say the only way to help
+                  renters through the coronavirus crisis is for rent payments to
+                  be waived completely until the pandemic is over.
+                </p>
+              </div>
+            </div>
+            <div class="card item item-1 border-0">
+              <div class="article-classification">
+                <a href="#" class="font-weight-bold text-red">HEALTH</a>
+              </div>
+              <a href="">
+                <img
+                  src="https://d.newsweek.com/en/full/1579750/rent-freeze.webp?w=397&h=265&l=0&t=0&f=88a936df61a1ce2915287588495cbd67"
+                  alt=""
+                  class="card-img-top"
+              /></a>
+              <div class="card-body item-body">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    Rent Strikes Gather Steam As Campaigners Call For Payments
+                    To Be Waived
+                  </p>
+                </a>
+                <p class="font-size-14">
+                  Many tenants unions and campaigners say the only way to help
+                  renters through the coronavirus crisis is for rent payments to
+                  be waived completely until the pandemic is over.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3"></div>
+          <div class="col-lg-3"></div>
+        </div>
+      </section>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
