added last section

--- a/index.html
+++ b/index.html
@@ -1593,7 +1593,7 @@
               <a href="">
                 <div class="position-relative">
                   <img
-                    src="https://d.newsweek.com/en/full/1579744/covid-19-coronavirus-indonesia-getty.webp?w=397&h=265&f=cd27ed7ad448bf5945625ed5641ac832"
+                    src="https://d.newsweek.com/en/full/1574573/taj-mahal.webp?w=397&h=265&f=632f8bc314448a5850998fc50f6919f9"
                     alt=""
                     class="card-img-top"
                   />
@@ -1607,15 +1607,153 @@
               <div class="card-body item-body px-0">
                 <a href="">
                   <p class="h6 font-weight-bold text-black">
-                    Is It Selfish to Go Outside? Ethical Dilemmas During the
-                    Covid-19 Pandemic
+                    See the World While Social Distancing With These Virtual
+                    Tours
                   </p>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-lg-4"></div>
-          <div class="col-lg-4"></div>
+          <div class="col-lg-4">
+            <div class="card item item-1 border-0">
+              <a href="">
+                <div class="position-relative">
+                  <img
+                    src="https://d.newsweek.com/en/full/1572605/womens-history-month-slideshow.webp?w=397&h=265&f=0fc054ea0cb4f999211a840096a5e5aa"
+                    alt=""
+                    class="card-img-top"
+                  />
+                  <a
+                    href="#"
+                    class="font-weight-bold position-absolute gall-class text-red"
+                    >11</a
+                  >
+                </div></a
+              >
+              <div class="card-body item-body px-0">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    10 Iconic Spots Celebrating Women's History in the U.S.
+                  </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card item item-1 border-0">
+              <a href="">
+                <div class="position-relative">
+                  <img
+                    src="https://d.newsweek.com/en/full/1560097/tozeur-tunisia.webp?w=397&h=265&f=69a77ef1bd7e21c060a7b7685b05a73d"
+                    alt=""
+                    class="card-img-top"
+                  />
+                  <a
+                    href="#"
+                    class="font-weight-bold position-absolute gall-class text-red"
+                    >11</a
+                  >
+                </div></a
+              >
+              <div class="card-body item-body px-0">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    Relive the 'Star Wars' Saga at These Filming Locations
+                  </p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-5">
+        <h4
+          class="border-top text-red last-section pt-3 d-flex justify-content-start mt-5 mb-3 pb-2 font-weight-bold middle-page-separator"
+        >
+          U.S
+        </h4>
+        <div class="row">
+          <div class="col-4">
+            <div class="card item item-1 border-0">
+              <a href="">
+                <div class="position-relative">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580481/prison.webp?w=397&h=265&f=d51699de643728c30166834116af51ed"
+                    alt=""
+                    class="card-img-top"
+                  /></div
+              ></a>
+              <div class="card-body item-body px-0">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    Relive the 'Star Wars' ACLU Launches TV Ad Campaign Calling
+                    For Release of Inmates Amid PandemicSaga at These Filming
+                    Locations
+                  </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card item item-1 border-0">
+              <a href="">
+                <div class="position-relative">
+                  <img
+                    src="https://d.newsweek.com/en/full/1580487/president-trump-meets-oil-executives-white-house.webp?w=397&h=265&f=58ed36ef01c39255ce90e8de84c13667"
+                    alt=""
+                    class="card-img-top"
+                  /></div
+              ></a>
+              <div class="card-body item-body px-0">
+                <a href="">
+                  <p class="h6 font-weight-bold text-black">
+                    White House to Create Coronavirus Economic Task Force: What
+                    Do We Know?
+                  </p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="media border-bottom pb-2">
+              <img
+                src="https://d.newsweek.com/en/full/1580486/us-economy-health-virus-imf.webp?w=95&h=95&f=b492b8f5b02398c4c2e98ffba898574b"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <h5 class="mt-0">
+                  Pandemic Will Trigger the Worst Recession Since the
+                  Depression: IMF Chief
+                </h5>
+              </div>
+            </div>
+            <div class="media border-bottom pb-2">
+              <img
+                src="https://d.newsweek.com/en/full/1580473/stimulus.webp?w=95&h=95&f=5c940d0b3943619aef62fd058e32652b"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <h5 class="mt-0">
+                  When Are Stimulus Checks Being Deposited Into Bank Accounts?
+                </h5>
+              </div>
+            </div>
+            <div class="media border-bottom pb-2">
+              <img
+                src="https://d.newsweek.com/en/full/1580429/federal-reserve-announces-23-trillion-coronavirus-plan.webp?w=95&h=95&f=a942728e5ef8e89e32547bc5166cee1b"
+                alt=""
+                class="d-flex mr-3"
+              />
+              <div class="media-body">
+                <h5 class="mt-0">
+                  Who Will Benefit From Federal Reserve's $2.3T Main Street
+                  Loans Program?
+                </h5>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
